# yew-app

./: Cargo.toml  README.md  index.html
src/: components.rs  main.rs  services.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
src/components/: producer.rs  subscriber.rs
src/services/: event_bus.rs  mod.rs  tauri.rs
