[package]
name = "yew-app"
version = "0.1.0"
authors = ["Rasmus <14540163+rmvermeulen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17.3"
web-sys = "0.3.48"
wasm-bindgen = { version = "0.2.71", features = [ "serde-serialize"] }
js-sys = "0.3.48"
serde = "1.0.124"
wasm-bindgen-futures = "0.4.21"